[package]
name    = "db"
version = "0.1.0"
authors = ["Chinmay Kulkarni <chnm.kulkarni@gmail.com>",
           "Ryan Stutsman <stutsman@cs.utah.edu>"]
license = "MIT"

[lib]
name = "db"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "sanity"
path = "src/bin/client/sanity.rs"

[[bin]]
name = "tao"
path = "src/bin/client/tao.rs"

[[bin]]
name = "bad"
path = "src/bin/client/bad.rs"

[[bin]]
name = "ycsb"
path = "src/bin/client/ycsb.rs"

[[bin]]
name = "long"
path = "src/bin/client/long.rs"

[[bin]]
name = "aggregate"
path = "src/bin/client/aggregate.rs"

[[bin]]
name = "ext_bench"
path = "src/bin/ext_bench.rs"

[[bin]]
name = "table_bench"
path = "src/bin/table_bench.rs"

[dependencies]
libc         = "0.2.43"
nix          = "0.11.0"
log          = "0.3"
rand         = "0.4"
time         = "0.1"
spin         = "0.4.7"  # Consider using parking lot?
bytes        = "0.4.7"
env_logger   = "0.3"
libloading   = "0.3"
serde        = "1.0.37"
serde_derive = "1.0.37"
toml         = "0.4.5"
zipf         = "2.0"
sandstorm    = {path = "../sandstorm"}
e2d2         = {path = "../net/framework"}

# Add feature name in default features to enable cyclecounter for the given stage,
# where stage name can be ["dispatch", "extension", "execution"].
[features]
default = []
dispatch = []
extension = []
execution = []
