[package]
name = "splinter"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
license = "MIT"

[lib]
name = "splinter"
path = "src/lib.rs"

[[bin]]
name = "sanity"
path = "src/bin/client/sanity.rs"

[[bin]]
name = "tao"
path = "src/bin/client/tao.rs"

[[bin]]
name = "bad"
path = "src/bin/client/bad.rs"

[[bin]]
name = "ycsb"
path = "src/bin/client/ycsb.rs"

[[bin]]
name = "long"
path = "src/bin/client/long.rs"

[[bin]]
name = "aggregate"
path = "src/bin/client/aggregate.rs"

[[bin]]
name = "pushback"
path = "src/bin/client/pushback.rs"

[[bin]]
name = "ycsb-abce"
path = "src/bin/client/ycsb-abce.rs"

[[bin]]
name = "analysis"
path = "src/bin/client/analysis.rs"

[[bin]]
name = "auth"
path = "src/bin/client/auth.rs"

[dependencies]
libc         = "0.2.43"
nix          = "0.11.0"
log          = "0.3"
rand         = "0.4"
time         = "0.1"
spin         = "0.4.7"  # Consider using parking lot?
bytes        = "0.4.7"
env_logger   = "0.3"
libloading   = "0.3"
serde        = "1.0.37"
serde_derive = "1.0.37"
toml         = "0.4.5"
zipf         = "2.0"
db           = {path = "../db"}
sandstorm    = {path = "../sandstorm"}
e2d2         = {path = "../net/framework"}
util         = {path = "../util"}

# Add feature name in default features to enable cyclecounter for the given stage,
# where stage name can be ["execution"].
[features]
default = []
execution = []